--- a/apps/courseplanner/templates/index.html
+++ b/apps/courseplanner/templates/index.html
@@ -9,15 +9,53 @@
 
 <div class="section" id="vue-target" v-cloak>
 
-
-
   <div class="columns">
 
     <div class="column">
       <section class="section">
         <div class="container">
-          <h2 class="subtitle">Current Courses</h2>
+          <h2 id="planner_name" class="subtitle">Insert Planner Name Here</h2>
           <!-- Current courses list goes here -->
+          <table id="table" class="table is-striped is-fullwidth" hidden>
+            <thead>
+              <th></th>
+              <th>Fall</th>
+              <th>Winter</th>
+              <th>Spring</th>
+              <th>Summer</th>
+            </thead>
+            <tbody id="planner_body" >
+              <tr id="first_year">
+                <td class="has-text-weight-bold">1st Year</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              <tr id="second_year">
+                <td class="has-text-weight-bold">2nd Year</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr id="third_year">
+                <td class="has-text-weight-bold">3rd Year</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr id="fourth_year">
+                <td class="has-text-weight-bold">4th Year</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
+          <h2 id="no_table">Add a course to your planner.</h3>
+  
         </div>
       </section>
     </div>
@@ -35,14 +73,16 @@
               <button class="button is-primary">Search</button>
             </div>
           </div>
-          <div class="field has-addons" v-for="c in courses">
+          
+          <div class="field has-addons" v-for="course in courses">
             <div class="level-right">
-              <label class="checkbox clickable ">
-                <input type="checkbox"  v-model="selectedCourses" :id="c.name" :value="c.id">
-                {{c.name}}
+              <label class="checkbox">
+                <input type="checkbox"  v-model="selectedCourses" :id="course.name" :value="course.id">
+                {{course.name}}
               </label>
             </div>
           </div>
+
           <a class="button is-success clickable" @click="addcourses()" >
             <span class="icon">
               <i class="fa fa-plus"></i>
@@ -67,6 +107,7 @@
 [[block page_scripts]]
 <!-- Loads the index-specific js for Vue -->
 <script>
+  let add_course_url = "[[=XML(add_course_url)]]";
 </script>
 <script src="js/index.js"></script>
 <script src='https://cdn.jsdelivr.net/npm/vue2-timeago@1.2.3/dist/vue2-timeago.js'></script>
