--- a/apps/courseplanner/templates/index.html
+++ b/apps/courseplanner/templates/index.html
@@ -84,7 +84,7 @@
                                               <input type="checkbox"  v-model="selectedCourses" :id="course.name" :value="course.id">
                                               {{course.name}}
                                             </label>
-                                            <a class="button is-light">
+                                            <a class="button is-light" href='[[=URL("course/edit")]]'>
                                                 <span class="icon "><i class="fa fa-fw fa-pencil"></i></span>
                                                 <span>Edit</span>
                                             </a>
@@ -150,6 +150,7 @@
     <script>
         let add_course_url = "[[=XML(add_course_url)]]";
         let delete_course_url = "[[=XML(delete_course_url)]]";
+        let edit_course_url = "[[=XML(edit_course_url)]]";
     </script>
     <script src="js/index.js"></script>
     <script src='https://cdn.jsdelivr.net/npm/vue2-timeago@1.2.3/dist/vue2-timeago.js'></script>
