--- a/apps/courseplanner/templates/index.html
+++ b/apps/courseplanner/templates/index.html
@@ -14,7 +14,12 @@
         <div class="column">
             <section class="section">
                 <div class="container">
-                    <h2 id="planner_name" class="subtitle">Insert Planner Name Here</h2>
+                    <h2 id="planner_name" class="subtitle">
+                        Insert Planner Name Here
+                        <a class="button is-primary" @click="share_courses()">
+                            <span>Share</span>
+                        </a>
+                    </h2>
                     <!-- Current courses list goes here -->
                     <table id="table" class="table is-striped is-fullwidth" hidden>
                         <thead>
@@ -151,6 +156,7 @@
         let add_course_url = "[[=XML(add_course_url)]]";
         let delete_course_url = "[[=XML(delete_course_url)]]";
         let edit_course_url = "[[=XML(edit_course_url)]]";
+        let share_courses_url = "[[=XML(share_courses_url)]]";
     </script>
     <script src="js/index.js"></script>
     <script src='https://cdn.jsdelivr.net/npm/vue2-timeago@1.2.3/dist/vue2-timeago.js'></script>
