--- a/apps/courseplanner/templates/course.html
+++ b/apps/courseplanner/templates/course.html
@@ -13,6 +13,12 @@
   a.button {
       margin-left: 10px;
   }
+
+  .select{
+    vertical-align: inherit;
+  }
+
+  
 </style>
 
 <section class="section is-half">
