fixed bug with updatePlanner/addCourse

--- a/apps/courseplanner/templates/layout.html
+++ b/apps/courseplanner/templates/layout.html
@@ -43,6 +43,7 @@
             <div class="navbar-dropdown">
               <a class="navbar-item" href="[[=URL('planner/add')]]">My Planner</a>
               <a class="navbar-item" href="[[=URL('planner/add')]]">Add planner</a>
+              <a class="navbar-item" href="[[=URL('share')]]">Share Planner</a>
             </div>
           </div>
           <div class="navbar-item has-dropdown is-hoverable">
